drivers/gpu/drm/i915/intel_lvds.c
@@ -810,6 +810,22 @@ static bool lvds_is_present_in_vbt(struct drm_device *dev)
 	return false;
 }
 
+static bool intel_lvds_ddc_probe(struct drm_device *dev)
+{
+	struct drm_i915_private *dev_priv = dev->dev_private;
+	u8 buf = 0;
+	struct i2c_msg msgs[] = {
+		{
+			.addr = 0xA0,
+			.flags = 0,
+			.len = 1,
+			.buf = &buf,
+		},
+	};
+	struct i2c_adapter *i2c = &dev_priv->gmbus[GMBUS_PORT_PANEL].adapter;
+	return i2c_transfer(i2c, msgs, 1) == 1;
+}
+
 /**
  * intel_lvds_init - setup LVDS connectors on this device
  * @dev: drm device
@@ -847,6 +863,11 @@ void intel_lvds_init(struct drm_device *dev)
 			return;
 		}
 		gpio = PCH_GPIOC;
+	}
+
+	if (!intel_lvds_ddc_probe(dev)) {
+		DRM_DEBUG_KMS("LVDS did not respond to DDC probe\n");
+		return;
 	}
 
 	intel_lvds = kzalloc(sizeof(struct intel_lvds), GFP_KERNEL);
